[package]
name = "lo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol_alloc = "0.4.0"
wasi = { version = "0.11.0", default-features = false }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
